journals, credentials and support api ended
